Fixed weird problem with media buttons on safari.... did not like the grid.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -231,7 +231,6 @@ text-decoration: none;
 
 /* for safari */
 @media screen and (-webkit-min-device-pixel-ratio:0) {
-  .media-buttons {
-    max-height: 3rem;
-  }
+  
 }
+
